--- a/packages/mantine/src/components/sticky-footer/StickyFooter.module.css
+++ b/packages/mantine/src/components/sticky-footer/StickyFooter.module.css
@@ -3,7 +3,9 @@
     bottom: 0;
     z-index: 10;
     background-color: white;
-}
-.footer {
     padding: var(--mantine-spacing-md) var(--mantine-spacing-lg);
+}
+
+.border {
+    border-top: 1px solid var(--mantine-color-gray-3);
 }
